add table and styling and footer

--- a/index.html
+++ b/index.html
@@ -7,55 +7,116 @@
     <title>Table Practice</title>
   </head>
   <body>
+    <h1>Top 10 Crossing Animated Filmes of All Time</h1>
     <table>
       <thead>
         <tr>
-          <th>
-            Film Title
-          </th>
-          <th>
-            Released
-          </th>
-          <th>
-            Studio
-          </th>
-          <th>
-            Worldwide Gross
-          </th>
-          <th>
-            Domestic Gross
-          </th>
-          <th>
-            Foreign Gross
-          </th>
-          <th>
-            Budget
-          </th>
+          <th>Film Title</th>
+          <th>Released</th>
+          <th>Studio</th>
+          <th>Worldwide Gross</th>
+          <th>Domestic Gross</th>
+          <th>Foreign Gross</th>
+          <th>Budget</th>
         </tr>
       </thead>
+      <tfoot>
+        <tr>
+          <th colspan="7">
+            Sources: Wikipedia and Box Office Mojo. Data is current as of September 1, 2015.
+          </th>
+        </tr>
+      </tfoot>
       <tbody>
         <tr>
-          <td>
-            Frozen
-          </td>
-          <td>
-
-          </td>
-          <td>
-
-          </td>
-          <td>
-
-          </td>
-          <td>
-
-          </td>
-          <td>
-
-          </td>
-          <td>
-
-          </td>
+          <td>Frozen</td>
+          <td>2013</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Toy Story 3</td>
+          <td>2010</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Mininions</td>
+          <td>2015</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>The Lion King</td>
+          <td>1994</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Dispicable Me 2</td>
+          <td>2013</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Finding Nemo</td>
+          <td>2003</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Shrek 2</td>
+          <td>2004</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Ice Age Dawn of the Dinosaurs</td>
+          <td>2009</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Ice Age Continental Drift</td>
+          <td>2012</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
+        </tr>
+        <tr>
+          <td>Shrek the 3rd</td>
+          <td>2007</td>
+          <td>Disney</td>
+          <td>$1,279,852,693</td>
+          <td>$400,738,009</td>
+          <td>$873,481,000</td>
+          <td>$150,000,000</td>
         </tr>
       </tbody>
     </table>
